# motoman_sia5f_basic_sim

motoman_control/: CMakeLists.txt  package.xml
motoman_control/launch/: sia5_sim_control.launch  sia5f_fs100_interface_streaming.launch
motoman_control/scripts/: move_to_joint_real.py  move_to_joint_sim.py
motoman_custom_msgs/: CMakeLists.txt  package.xml
motoman_description/: CMakeLists.txt  package.xml
motoman_description/launch/: sia5.launch  sia5_basic.launch
motoman_description/launch/rviz_config/: sia5_basic.rviz
motoman_description/urdf/: sia5_basic.urdf.xacro
motoman_description/urdf/azure/: azure.urdf.xacro
motoman_description/urdf/sia5_arm/: body.gazebo.xacro
motoman_moveit/: CMakeLists.txt  package.xml
motoman_moveit/launch/: sia5f_basic_moveit_sim.launch
motoman_moveit/rviz_config/: moveit_sia5.rviz  sia5_basic_moveit_config.rviz
motoman_moveit_config/: .setup_assistant  package.xml
motoman_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  sia5.srdf  simple_moveit_controllers.yaml
motoman_moveit_config/default_warehouse_mongo_db/: WiredTiger.turtle  WiredTiger.wt  WiredTiger.wt.1  _mdb_catalog.wt  _mdb_catalog.wt.1  collection-16-6987943612169037647.wt  collection-2-1341894429936043665.wt  collection-2-6987943612169037647.wt  collection-33-6987943612169037647.wt  collection-44-6987943612169037647.wt  index-17-6987943612169037647.wt  index-3-1341894429936043665.wt  index-3-6987943612169037647.wt  index-34-6987943612169037647.wt  index-45-6987943612169037647.wt  sizeStorer.wt  sizeStorer.wt.1
motoman_moveit_config/default_warehouse_mongo_db/diagnostic.data/: metrics.2022-11-11T03-14-26Z-00000  metrics.2022-11-11T03-51-56Z-00000  metrics.2022-11-11T03-55-19Z-00000  metrics.2022-11-18T00-45-03Z-00000  metrics.2022-11-18T00-52-29Z-00000  metrics.2022-11-18T00-55-10Z-00000  metrics.2022-11-18T01-06-13Z-00000  metrics.2022-11-22T04-55-51Z-00000  metrics.2022-11-22T05-04-18Z-00000  metrics.2022-11-22T05-06-17Z-00000  metrics.2022-11-27T13-55-09Z-00000  metrics.2022-12-05T10-19-12Z-00000  metrics.2022-12-05T23-32-17Z-00000  metrics.2022-12-05T23-39-48Z-00000  metrics.2022-12-06T05-04-27Z-00000  metrics.2022-12-06T05-23-23Z-00000  metrics.2022-12-08T08-29-10Z-00000  metrics.2022-12-08T09-00-13Z-00000  metrics.2022-12-09T04-19-29Z-00000  metrics.2022-12-09T04-21-23Z-00000  metrics.2022-12-09T04-28-03Z-00000  metrics.2022-12-09T06-23-54Z-00000  metrics.2022-12-09T06-40-32Z-00000  metrics.2022-12-09T06-44-00Z-00000  metrics.2022-12-09T06-47-08Z-00000  metrics.2022-12-09T06-57-55Z-00000  metrics.2022-12-09T07-14-14Z-00000  metrics.2022-12-09T07-29-04Z-00000  metrics.2022-12-09T08-34-40Z-00000  metrics.2022-12-09T08-36-26Z-00000  metrics.2022-12-09T08-40-36Z-00000  metrics.2022-12-09T08-43-15Z-00000  metrics.2022-12-09T08-45-10Z-00000  metrics.2022-12-09T08-57-22Z-00000  metrics.2022-12-09T09-00-56Z-00000  metrics.2022-12-09T09-01-52Z-00000  metrics.2022-12-09T09-19-26Z-00000  metrics.2022-12-09T09-30-08Z-00000  metrics.2022-12-09T09-37-55Z-00000  metrics.2022-12-09T09-42-02Z-00000  (+4 more)
motoman_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  sia5_moveit_planning_execution.launch
motoman_sia5f_gazebo/: CMakeLists.txt  package.xml
motoman_sia5f_gazebo/launch/: sia5f_basic_moveit_sim.launch  sia5f_basic_sim.launch
motoman_sia5f_gazebo/scripts/: pilz_planner_control_sim_test.py
