<?xml version="1.0"?>
<package format="2">
  <name>motoman_control</name>
  <version>0.0.1</version>

  <description>The motoman_control package for sia5f series robot</description>

  <maintainer email="gmp.prem1997@gmail.com">prem</maintainer>

  <license>BSD</license>

  <author email="groadpg@gmail.com">RyodoTanaka</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>motoman_driver</exec_depend>
  <exec_depend>industrial_robot_client</exec_depend>
  <!-- <exec_depend>dhand_control</exec_depend> -->
  
  <export>
  </export>
  
</package>
